--- a/index.html
+++ b/index.html
@@ -2,291 +2,314 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Axel-One: Web Edition</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Ubuntu', sans-serif;
       background: #f0f0f0;
       text-align: center;
-      padding: 20px;
+      padding: 10px;
+      margin: 0;
     }
+
     h1 { color: #333; }
+
     .cards button {
-      margin: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
+      margin: 6px;
+      padding: 12px 24px;
+      font-size: 18px;
       cursor: pointer;
     }
-    .hand { margin: 10px 0; }
-    #log {
-      margin-top: 30px;
-      max-height: 300px;
-      overflow-y: auto;
-      text-align: left;
-      background: #fff;
-      padding: 10px;
-      border: 1px solid #ccc;
-    }
+
     .slap-btn {
       background-color: #f44336;
       color: white;
       font-weight: bold;
+      font-size: 20px;
+      border: none;
+      padding: 15px 30px;
     }
-    @keyframes flashRed {
-      0% { opacity: 0; }
-      20% { opacity: 1; }
-      100% { opacity: 0; }
+
+    .hand {
+      margin: 12px 0;
     }
+
+    #log {
+      margin-top: 30px;
+      max-height: 250px;
+      overflow-y: auto;
+      text-align: left;
+      background: #fff;
+      padding: 12px;
+      border: 1px solid #ccc;
+    }
+
     #overlay {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: #000;
+      inset: 0;
+      background: black;
       color: white;
-      font-size: 24px;
       display: flex;
-      align-items: center;
       justify-content: center;
-      z-index: 10000;
-    }
-    #flashOverlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: red;
-      opacity: 0;
-      pointer-events: none;
+      align-items: center;
+      font-size: 24px;
       z-index: 9999;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .red-flash {
+      animation: flash 0.5s;
+    }
+
+    @keyframes flash {
+      0% { background: red; }
+      100% { background: #f0f0f0; }
+    }
+
+    /* Responsive for mobile */
+    @media (max-width: 768px) {
+      body {
+        font-size: 18px;
+      }
+      .cards button {
+        padding: 14px 20px;
+        font-size: 20px;
+        margin: 8px 4px;
+      }
+      .slap-btn {
+        font-size: 22px;
+        padding: 20px;
+      }
+      #log {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
 <body>
-  <div id="overlay">Matching with a random Axilian... please wait...</div>
 
-  <h1>Axel-One: Web Edition</h1>
+<div id="overlay">Matching with a random Axilian... please wait...</div>
 
-  <p><strong>Your Hand:</strong></p>
-  <div class="hand" id="playerHand"></div>
+<h1>Axel-One: Web Edition</h1>
+<p><strong>Your Hand:</strong></p>
+<div class="hand" id="playerHand"></div>
+<p><strong id="computerHandTitle" style="display:none">Axilian's Hand:</strong></p>
+<div class="hand" id="computerHand" style="display:none"></div>
 
-  <p><strong id="computerHandTitle" style="display:none">Axilian's Hand:</strong></p>
-  <div class="hand" id="computerHand" style="display:none"></div>
+<div id="slapArea" style="display:none">
+  <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
+</div>
 
-  <div id="slapArea" style="display:none">
-    <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
-  </div>
+<div id="log"></div>
 
-  <div id="log"></div>
+<audio id="deathSound" src="death.mp3"></audio>
 
-  <audio id="deathSound" src="death.mp3" preload="auto"></audio>
-  <div id="flashOverlay"></div>
+<script>
+  let lastCard = null;
+  let slapTimeout = null;
+  let playerCards = [];
+  let computerCards = [];
+  let isGameOver = false;
 
-  <script>
-    let lastCard = null;
-    let slapTimeout = null;
-    let playerCards = [];
-    let computerCards = [];
-    let gameOver = false;
-    let slapInProgress = false;
+  function log(msg) {
+    const logBox = document.getElementById("log");
+    logBox.innerHTML += `<div>> ${msg}</div>`;
+    logBox.scrollTop = logBox.scrollHeight;
+  }
 
-    function log(msg) {
-      const logBox = document.getElementById("log");
-      logBox.innerHTML += `<div>> ${msg}</div>`;
-      logBox.scrollTop = logBox.scrollHeight;
+  function validResponses(card) {
+    if (["swap", "slap", "blank"].includes(card)) return ["1", "2", "3", "swap", "slap", "blank"];
+    if (card === "1") return ["1", "2", "swap", "slap", "blank"];
+    if (card === "2") return ["1", "2", "3", "swap", "slap", "blank"];
+    if (card === "3") return ["2", "3", "swap", "slap", "blank"];
+    return ["1", "2", "3", "swap", "slap", "blank"];
+  }
+
+  function getRandomCard() {
+    const roll = Math.floor(Math.random() * 10) + 1;
+    if (roll <= 3) return '1';
+    if (roll <= 5) return '2';
+    if (roll <= 8) return '3';
+    if (roll === 9) return 'swap';
+    return Math.random() < 0.5 ? 'slap' : 'blank';
+  }
+
+  function drawInitialCards() {
+    for (let i = 0; i < 10; i++) {
+      playerCards.push(getRandomCard());
+      computerCards.push(getRandomCard());
     }
+    updatePlayerHand();
+  }
 
-    function validResponses(card) {
-      if (["swap", "slap", "blank"].includes(card)) return ["1", "2", "3", "swap", "slap", "blank"];
-      if (card === "1") return ["1", "2", "swap", "slap", "blank"];
-      if (card === "2") return ["1", "2", "3", "swap", "slap", "blank"];
-      if (card === "3") return ["2", "3", "swap", "slap", "blank"];
-      return ["1", "2", "3", "swap", "slap", "blank"];
+  function updatePlayerHand() {
+    const container = document.getElementById("playerHand");
+    container.innerHTML = '';
+    playerCards.forEach((card, index) => {
+      const btn = document.createElement("button");
+      btn.textContent = card;
+      btn.onclick = () => playerPlayCard(index);
+      container.appendChild(btn);
+    });
+  }
+
+  function showComputerHand() {
+    const container = document.getElementById("computerHand");
+    const title = document.getElementById("computerHandTitle");
+    container.innerHTML = '';
+    computerCards.forEach(card => {
+      const span = document.createElement("span");
+      span.textContent = `[${card}] `;
+      container.appendChild(span);
+    });
+    container.style.display = 'block';
+    title.style.display = 'block';
+  }
+
+  function checkWinCondition() {
+    if (playerCards.length === 0 && lastCard !== 'slap') {
+      log("You used all your cards. You win! 🎉");
+      isGameOver = true;
+      cleanupEnd();
+      return true;
     }
-
-    function getRandomCard() {
-      const roll = Math.random();
-      if (roll < 0.2) return "2"; // 20% chance for 2
-      if (roll < 0.5) return "1"; // 30%
-      if (roll < 0.8) return "3"; // 30%
-      if (roll < 0.9) return "blank"; // 10%
-      if (roll < 0.97) return "swap";  // 7%
-      return "slap";                   // 3%
-    }
-
-    function drawInitialCards() {
-      for (let i = 0; i < 5; i++) {
-        playerCards.push(getRandomCard());
-        computerCards.push(getRandomCard());
-      }
-      updatePlayerHand();
-    }
-
-    function updatePlayerHand() {
-      const container = document.getElementById("playerHand");
-      container.innerHTML = '';
-      playerCards.forEach((card, index) => {
-        const btn = document.createElement("button");
-        btn.textContent = card;
-        btn.onclick = () => playerPlayCard(index);
-        container.appendChild(btn);
-      });
-    }
-
-    function showComputerHand() {
-      const container = document.getElementById("computerHand");
-      const title = document.getElementById("computerHandTitle");
-      container.innerHTML = '';
-      computerCards.forEach(card => {
-        const span = document.createElement("span");
-        span.textContent = `[${card}] `;
-        container.appendChild(span);
-      });
-      container.style.display = 'block';
-      title.style.display = 'block';
-    }
-
-    function checkPlayable(cards) {
-      const valid = validResponses(lastCard);
-      return cards.some(card => valid.includes(card));
-    }
-
-    function clearAllHands() {
-      document.getElementById("playerHand").innerHTML = '';
-      document.getElementById("computerHand").innerHTML = '';
-    }
-
-    function endGame() {
-      gameOver = true;
-      slapInProgress = false;
-      clearTimeout(slapTimeout);
-      document.getElementById('slapArea').style.display = 'none';
+    if (computerCards.length === 0 && lastCard !== 'slap') {
+      log("Axilian used all their cards. You win! 🎉");
       showComputerHand();
+      isGameOver = true;
+      cleanupEnd();
+      return true;
+    }
+    return false;
+  }
 
-      const flash = document.getElementById("flashOverlay");
-      const deathSound = document.getElementById("deathSound");
+  function cleanupEnd() {
+    document.getElementById("playerHand").innerHTML = '';
+    document.getElementById("computerHand").innerHTML = '';
+    setTimeout(() => location.reload(), 5000);
+  }
 
-      if (playerCards.length === 0) {
-        log("You used all your cards. You win! 🎉");
-      } else if (computerCards.length === 0) {
-        log("Axilian used all their cards. You lose! 💀");
-        deathSound.play();
-        flash.style.animation = "flashRed 1s ease";
-      } else if (!checkPlayable(playerCards)) {
-        log("You have no valid cards left to play. You lose! 💀");
-        deathSound.play();
-        flash.style.animation = "flashRed 1s ease";
-      } else if (!checkPlayable(computerCards)) {
-        log("Axilian has no valid cards left. You win! 🎉");
-      }
+  function swapCards() {
+    [playerCards, computerCards] = [computerCards, playerCards];
+    log("Cards have been swapped!");
+    updatePlayerHand();
+  }
 
-      clearAllHands();
-      setTimeout(() => location.reload(), 5000);
+  function playerPlayCard(index) {
+    if (isGameOver) return;
+    const card = playerCards[index];
+    if (!validResponses(lastCard).includes(card)) {
+      log(`Invalid move! You can't play ${card} after ${lastCard}`);
+      return;
+    }
+    log(`You played: ${card}`);
+    lastCard = card;
+    playerCards.splice(index, 1);
+    updatePlayerHand();
+
+    if (card === 'slap') {
+      startSlapBattle();
+      return;
     }
 
-    function swapCards() {
-      [playerCards, computerCards] = [computerCards, playerCards];
-      log("Cards have been swapped!");
-      updatePlayerHand();
+    if (card === 'swap') {
+      swapCards();
     }
 
-    function playerPlayCard(index) {
-      if (gameOver || slapInProgress) return;
-      const card = playerCards[index];
-      if (!validResponses(lastCard).includes(card)) {
-        log(`Invalid move! You can't play ${card} after ${lastCard}`);
-        return;
-      }
+    if (checkWinCondition()) return;
 
-      log(`You played: ${card}`);
-      lastCard = card;
-      playerCards.splice(index, 1);
-      updatePlayerHand();
-
-      if (card === 'slap') {
-        startSlapBattle(false);
-      } else if (card === 'swap') {
-        swapCards();
-        setTimeout(() => {
-          if (!checkPlayable(computerCards)) return endGame();
-          computerMove();
-        }, 1000);
-      } else {
-        if (playerCards.length === 0) return endGame();
-        if (!checkPlayable(computerCards)) return endGame();
-        setTimeout(computerMove, 1000);
-      }
+    if (!hasPlayableCard(computerCards)) {
+      log("Axilian has no valid cards. You win! 🎉");
+      showComputerHand();
+      isGameOver = true;
+      cleanupEnd();
+      return;
     }
 
-    function computerMove() {
-      if (gameOver) return;
-      const valid = validResponses(lastCard);
-      const playable = computerCards.find(card => valid.includes(card));
-      if (!playable) return endGame();
+    setTimeout(computerMove, 1000);
+  }
 
-      const index = computerCards.findIndex(c => c === playable);
-      const card = computerCards.splice(index, 1)[0];
-      log(`Axilian played: ${card}`);
-      lastCard = card;
+  function computerMove() {
+    if (isGameOver) return;
+    const valid = validResponses(lastCard);
+    const playable = computerCards.find(card => valid.includes(card));
+    if (!playable) {
+      log("Axilian has no valid cards. You win! 🎉");
+      showComputerHand();
+      isGameOver = true;
+      cleanupEnd();
+      return;
+    }
+    const index = computerCards.findIndex(c => c === playable);
+    const card = computerCards.splice(index, 1)[0];
+    log(`Axilian played: ${card}`);
+    lastCard = card;
 
-      if (card === 'slap') {
-        startSlapBattle(true);
-      } else if (card === 'swap') {
-        swapCards();
-        if (!checkPlayable(playerCards)) return endGame();
-      } else {
-        if (!checkPlayable(playerCards)) return endGame();
-      }
-
-      if (computerCards.length === 0) return endGame();
+    if (card === 'slap') {
+      startSlapBattle(true);
+      return;
     }
 
-    function startSlapBattle(fromComputer = false) {
-      slapInProgress = true;
-      document.getElementById('slapArea').style.display = 'block';
-      log('SLAP battle begins! Click SLAP quickly!');
-
-      slapTimeout = setTimeout(() => {
-        handleSlap('axilian');
-      }, 1000);
+    if (card === 'swap') {
+      swapCards();
     }
 
-    function handleSlap(who) {
-      if (!slapInProgress) return;
-      slapInProgress = false;
-      clearTimeout(slapTimeout);
-      document.getElementById('slapArea').style.display = 'none';
+    if (checkWinCondition()) return;
 
-      if (who === 'player') {
-        log('You slapped first! Axilian draws a card.');
-        computerCards.push(getRandomCard());
-      } else {
-        log('Axilian slapped first! You draw a card.');
-        playerCards.push(getRandomCard());
-        updatePlayerHand();
-      }
+    if (!hasPlayableCard(playerCards)) {
+      log('You have no valid cards. Game over.');
+      document.body.classList.add("red-flash");
+      document.getElementById("deathSound").play();
+      isGameOver = true;
+      cleanupEnd();
+    }
+  }
 
-      if (!checkPlayable(playerCards) || !checkPlayable(computerCards) || playerCards.length === 0 || computerCards.length === 0) {
-        return endGame();
-      }
+  function hasPlayableCard(cards) {
+    const valid = validResponses(lastCard);
+    return cards.some(card => valid.includes(card));
+  }
 
+  function startSlapBattle(fromComputer = false) {
+    document.getElementById('slapArea').style.display = 'block';
+    log('SLAP battle begins! Click SLAP quickly!');
+    slapTimeout = setTimeout(() => handleSlap('computer'), 1000);
+  }
+
+  function handleSlap(who) {
+    clearTimeout(slapTimeout);
+    document.getElementById('slapArea').style.display = 'none';
+    if (who === 'player') {
+      log("You slapped first! Axilian draws a card.");
+      computerCards.push(getRandomCard());
+    } else {
+      log("Axilian slapped first! You draw a card.");
+      playerCards.push(getRandomCard());
+      document.body.classList.add("red-flash");
+      document.getElementById("deathSound").play();
+    }
+    updatePlayerHand();
+    if (!checkWinCondition()) setTimeout(computerMove, 1000);
+  }
+
+  function startGame() {
+    document.getElementById("overlay").style.display = "none";
+    drawInitialCards();
+
+    const first = Math.floor(Math.random() * 3) + 1;
+    if (first === 1 || first === 2) {
+      log("Axilian goes first.");
       setTimeout(computerMove, 1000);
+    } else {
+      log("You go first.");
     }
+  }
 
-    // Start game after 5s
-    window.onload = () => {
-      setTimeout(() => {
-        document.getElementById("overlay").style.display = "none";
-        drawInitialCards();
-        const first = Math.floor(Math.random() * 2) + 1;
-        if (first === 2) {
-          log("Axilian goes first.");
-          computerMove();
-        } else {
-          log("You go first.");
-        }
-      }, 5000);
-    };
-  </script>
-  <p>v. 2.1.0</p>
+  setTimeout(startGame, 5000);
+</script>
+<p>v. 3.1.0</p>
 </body>
 </html>
