--- a/index.html
+++ b/index.html
@@ -2,314 +2,253 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Axel-One: Web Edition</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+  <title>Axel-One: Web Edition</title>
   <style>
-    body {
-      font-family: 'Ubuntu', sans-serif;
-      background: #f0f0f0;
-      text-align: center;
-      padding: 10px;
-      margin: 0;
-    }
-
+    body { font-family: sans-serif; background: #f0f0f0; text-align: center; padding: 20px; }
     h1 { color: #333; }
-
-    .cards button {
-      margin: 6px;
-      padding: 12px 24px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    .slap-btn {
-      background-color: #f44336;
-      color: white;
-      font-weight: bold;
-      font-size: 20px;
-      border: none;
-      padding: 15px 30px;
-    }
-
-    .hand {
-      margin: 12px 0;
-    }
-
-    #log {
-      margin-top: 30px;
-      max-height: 250px;
-      overflow-y: auto;
-      text-align: left;
-      background: #fff;
-      padding: 12px;
-      border: 1px solid #ccc;
-    }
-
-    #overlay {
-      position: fixed;
-      inset: 0;
-      background: black;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
-      z-index: 9999;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .red-flash {
-      animation: flash 0.5s;
-    }
-
-    @keyframes flash {
-      0% { background: red; }
-      100% { background: #f0f0f0; }
-    }
-
-    /* Responsive for mobile */
+    .cards { margin: 20px 0; }
+    .cards button { margin: 5px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
+    #log { margin-top: 30px; max-height: 300px; overflow-y: auto; text-align: left; background: #fff; padding: 10px; border: 1px solid #ccc; }
+    .slap-btn { background-color: #f44336; color: white; font-weight: bold; }
+    .hand { margin: 10px 0; }
+    .hidden { display: none; }
     @media (max-width: 768px) {
-      body {
-        font-size: 18px;
-      }
-      .cards button {
-        padding: 14px 20px;
-        font-size: 20px;
-        margin: 8px 4px;
-      }
-      .slap-btn {
-        font-size: 22px;
-        padding: 20px;
-      }
-      #log {
-        font-size: 16px;
-      }
+      .cards button { font-size: 12px; padding: 8px 16px; }
+    }
+    .red-flash {
+      animation: flashRed 0.5s 5;
+    }
+    @keyframes flashRed {
+      0% { background-color: #f0f0f0; }
+      50% { background-color: red; }
+      100% { background-color: #f0f0f0; }
     }
   </style>
 </head>
 <body>
+  <audio id="deathSound" src="death.mp3"></audio>
+  <div id="startScreen">
+    <h1>Matching with a random Axilian... please wait...</h1>
+  </div>
 
-<div id="overlay">Matching with a random Axilian... please wait...</div>
+  <div id="gameArea" class="hidden">
+    <h1>Axel-One: Web Edition</h1>
+    <p><strong>Your Hand:</strong></p>
+    <div class="hand" id="playerHand"></div>
+    <p><strong id="computerHandTitle" style="display:none">Axilian's Hand:</strong></p>
+    <div class="hand" id="computerHand" style="display:none"></div>
+    <div id="slapArea" style="display:none">
+      <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
+    </div>
+    <div id="log"></div>
+  </div>
 
-<h1>Axel-One: Web Edition</h1>
-<p><strong>Your Hand:</strong></p>
-<div class="hand" id="playerHand"></div>
-<p><strong id="computerHandTitle" style="display:none">Axilian's Hand:</strong></p>
-<div class="hand" id="computerHand" style="display:none"></div>
+  <script>
+    let lastCard = null;
+    let slapTimeout = null;
+    let playerCards = [], computerCards = [];
+    let isGameOver = false;
 
-<div id="slapArea" style="display:none">
-  <button class="slap-btn" onclick="handleSlap('player')">SLAP!</button>
-</div>
-
-<div id="log"></div>
-
-<audio id="deathSound" src="death.mp3"></audio>
-
-<script>
-  let lastCard = null;
-  let slapTimeout = null;
-  let playerCards = [];
-  let computerCards = [];
-  let isGameOver = false;
-
-  function log(msg) {
-    const logBox = document.getElementById("log");
-    logBox.innerHTML += `<div>> ${msg}</div>`;
-    logBox.scrollTop = logBox.scrollHeight;
-  }
-
-  function validResponses(card) {
-    if (["swap", "slap", "blank"].includes(card)) return ["1", "2", "3", "swap", "slap", "blank"];
-    if (card === "1") return ["1", "2", "swap", "slap", "blank"];
-    if (card === "2") return ["1", "2", "3", "swap", "slap", "blank"];
-    if (card === "3") return ["2", "3", "swap", "slap", "blank"];
-    return ["1", "2", "3", "swap", "slap", "blank"];
-  }
-
-  function getRandomCard() {
-    const roll = Math.floor(Math.random() * 10) + 1;
-    if (roll <= 3) return '1';
-    if (roll <= 5) return '2';
-    if (roll <= 8) return '3';
-    if (roll === 9) return 'swap';
-    return Math.random() < 0.5 ? 'slap' : 'blank';
-  }
-
-  function drawInitialCards() {
-    for (let i = 0; i < 10; i++) {
-      playerCards.push(getRandomCard());
-      computerCards.push(getRandomCard());
-    }
-    updatePlayerHand();
-  }
-
-  function updatePlayerHand() {
-    const container = document.getElementById("playerHand");
-    container.innerHTML = '';
-    playerCards.forEach((card, index) => {
-      const btn = document.createElement("button");
-      btn.textContent = card;
-      btn.onclick = () => playerPlayCard(index);
-      container.appendChild(btn);
-    });
-  }
-
-  function showComputerHand() {
-    const container = document.getElementById("computerHand");
-    const title = document.getElementById("computerHandTitle");
-    container.innerHTML = '';
-    computerCards.forEach(card => {
-      const span = document.createElement("span");
-      span.textContent = `[${card}] `;
-      container.appendChild(span);
-    });
-    container.style.display = 'block';
-    title.style.display = 'block';
-  }
-
-  function checkWinCondition() {
-    if (playerCards.length === 0 && lastCard !== 'slap') {
-      log("You used all your cards. You win! 🎉");
-      isGameOver = true;
-      cleanupEnd();
-      return true;
-    }
-    if (computerCards.length === 0 && lastCard !== 'slap') {
-      log("Axilian used all their cards. You win! 🎉");
-      showComputerHand();
-      isGameOver = true;
-      cleanupEnd();
-      return true;
-    }
-    return false;
-  }
-
-  function cleanupEnd() {
-    document.getElementById("playerHand").innerHTML = '';
-    document.getElementById("computerHand").innerHTML = '';
-    setTimeout(() => location.reload(), 5000);
-  }
-
-  function swapCards() {
-    [playerCards, computerCards] = [computerCards, playerCards];
-    log("Cards have been swapped!");
-    updatePlayerHand();
-  }
-
-  function playerPlayCard(index) {
-    if (isGameOver) return;
-    const card = playerCards[index];
-    if (!validResponses(lastCard).includes(card)) {
-      log(`Invalid move! You can't play ${card} after ${lastCard}`);
-      return;
-    }
-    log(`You played: ${card}`);
-    lastCard = card;
-    playerCards.splice(index, 1);
-    updatePlayerHand();
-
-    if (card === 'slap') {
-      startSlapBattle();
-      return;
+    function log(msg) {
+      const logBox = document.getElementById("log");
+      logBox.innerHTML += `<div>> ${msg}</div>`;
+      logBox.scrollTop = logBox.scrollHeight;
     }
 
-    if (card === 'swap') {
-      swapCards();
+    function validResponses(card) {
+      if (["swap", "slap", "blank"].includes(card)) return ["1", "2", "3", "swap", "slap", "blank"];
+      if (card === "1") return ["1", "2", "swap", "slap", "blank"];
+      if (card === "2") return ["1", "2", "3", "swap", "slap", "blank"];
+      if (card === "3") return ["2", "3", "swap", "slap", "blank"];
+      return ["1", "2", "3", "swap", "slap", "blank"];
     }
 
-    if (checkWinCondition()) return;
-
-    if (!hasPlayableCard(computerCards)) {
-      log("Axilian has no valid cards. You win! 🎉");
-      showComputerHand();
-      isGameOver = true;
-      cleanupEnd();
-      return;
+    function getRandomCard() {
+      const roll = Math.random();
+      if (roll < 0.35) return '1';
+      if (roll < 0.6) return '3';
+      if (roll < 0.75) return '2';
+      if (roll < 0.85) return 'blank';
+      if (roll < 0.95) return 'swap';
+      return 'slap';
     }
 
-    setTimeout(computerMove, 1000);
-  }
-
-  function computerMove() {
-    if (isGameOver) return;
-    const valid = validResponses(lastCard);
-    const playable = computerCards.find(card => valid.includes(card));
-    if (!playable) {
-      log("Axilian has no valid cards. You win! 🎉");
-      showComputerHand();
-      isGameOver = true;
-      cleanupEnd();
-      return;
-    }
-    const index = computerCards.findIndex(c => c === playable);
-    const card = computerCards.splice(index, 1)[0];
-    log(`Axilian played: ${card}`);
-    lastCard = card;
-
-    if (card === 'slap') {
-      startSlapBattle(true);
-      return;
+    function drawInitialCards() {
+      for (let i = 0; i < 10; i++) {
+        playerCards.push(getRandomCard());
+        computerCards.push(getRandomCard());
+      }
+      updatePlayerHand();
     }
 
-    if (card === 'swap') {
-      swapCards();
+    function updatePlayerHand() {
+      const container = document.getElementById("playerHand");
+      container.innerHTML = '';
+      playerCards.forEach((card, index) => {
+        const btn = document.createElement("button");
+        btn.textContent = card;
+        btn.onclick = () => playerPlayCard(index);
+        container.appendChild(btn);
+      });
+      container.style.display = 'block';
     }
 
-    if (checkWinCondition()) return;
-
-    if (!hasPlayableCard(playerCards)) {
-      log('You have no valid cards. Game over.');
-      document.body.classList.add("red-flash");
-      document.getElementById("deathSound").play();
-      isGameOver = true;
-      cleanupEnd();
+    function hidePlayerHand() {
+      document.getElementById("playerHand").style.display = "none";
     }
-  }
 
-  function hasPlayableCard(cards) {
-    const valid = validResponses(lastCard);
-    return cards.some(card => valid.includes(card));
-  }
-
-  function startSlapBattle(fromComputer = false) {
-    document.getElementById('slapArea').style.display = 'block';
-    log('SLAP battle begins! Click SLAP quickly!');
-    slapTimeout = setTimeout(() => handleSlap('computer'), 1000);
-  }
-
-  function handleSlap(who) {
-    clearTimeout(slapTimeout);
-    document.getElementById('slapArea').style.display = 'none';
-    if (who === 'player') {
-      log("You slapped first! Axilian draws a card.");
-      computerCards.push(getRandomCard());
-    } else {
-      log("Axilian slapped first! You draw a card.");
-      playerCards.push(getRandomCard());
-      document.body.classList.add("red-flash");
-      document.getElementById("deathSound").play();
+    function showComputerHand() {
+      const container = document.getElementById("computerHand");
+      const title = document.getElementById("computerHandTitle");
+      container.innerHTML = '';
+      computerCards.forEach(card => {
+        const span = document.createElement("span");
+        span.textContent = `[${card}] `;
+        container.appendChild(span);
+      });
+      container.style.display = 'block';
+      title.style.display = 'block';
     }
-    updatePlayerHand();
-    if (!checkWinCondition()) setTimeout(computerMove, 1000);
-  }
 
-  function startGame() {
-    document.getElementById("overlay").style.display = "none";
-    drawInitialCards();
+    function checkWinCondition() {
+      if (playerCards.length === 0) {
+        log("You used all your cards. You win! 🎉");
+        isGameOver = true;
+        cleanupEnd();
+        return true;
+      }
+      if (computerCards.length === 0) {
+        log("Axilian used all their cards. You lose. 💀");
+        document.body.classList.add("red-flash");
+        document.getElementById("deathSound").play();
+        isGameOver = true;
+        cleanupEnd();
+        return true;
+      }
+      return false;
+    }
 
-    const first = Math.floor(Math.random() * 3) + 1;
-    if (first === 1 || first === 2) {
-      log("Axilian goes first.");
+    function cleanupEnd() {
+      playerCards = [];
+      computerCards = [];
+      document.getElementById("playerHand").innerHTML = '';
+      document.getElementById("computerHand").innerHTML = '';
+      setTimeout(() => location.reload(), 5000);
+    }
+
+    function swapCards() {
+      const temp = [...playerCards];
+      playerCards = [...computerCards];
+      computerCards = [...temp];
+      log("Cards have been swapped!");
+      updatePlayerHand();
+    }
+
+    function playerPlayCard(index) {
+      if (isGameOver) return;
+      const card = playerCards[index];
+      if (!validResponses(lastCard).includes(card)) {
+        log(`Invalid move! You can't play ${card} after ${lastCard}`);
+        return;
+      }
+      log(`You played: ${card}`);
+      lastCard = card;
+      playerCards.splice(index, 1);
+      hidePlayerHand();
+
+      if (card === 'slap') return startSlapBattle();
+      if (card === 'swap') swapCards();
+      if (checkWinCondition()) return;
+
+      if (!hasPlayableCard(computerCards)) {
+        log("Axilian has no valid cards. You win! 🎉");
+        showComputerHand();
+        isGameOver = true;
+        cleanupEnd();
+        return;
+      }
       setTimeout(computerMove, 1000);
-    } else {
-      log("You go first.");
     }
-  }
 
-  setTimeout(startGame, 5000);
-</script>
-<p>v. 3.1.0</p>
+    function computerMove() {
+      if (isGameOver) return;
+      const valid = validResponses(lastCard);
+      const playable = computerCards.find(card => valid.includes(card));
+      if (!playable) {
+        log("Axilian has no valid cards. You win! 🎉");
+        showComputerHand();
+        isGameOver = true;
+        cleanupEnd();
+        return;
+      }
+      const index = computerCards.findIndex(c => c === playable);
+      const card = computerCards.splice(index, 1)[0];
+      log(`Axilian played: ${card}`);
+      lastCard = card;
+
+      if (card === 'slap') return startSlapBattle(true);
+      if (card === 'swap') swapCards();
+      if (checkWinCondition()) return;
+
+      if (!hasPlayableCard(playerCards)) {
+        log('You have no valid cards. Game over. 💀');
+        document.body.classList.add("red-flash");
+        document.getElementById("deathSound").play();
+        isGameOver = true;
+        cleanupEnd();
+        return;
+      }
+      updatePlayerHand();
+    }
+
+    function hasPlayableCard(cards) {
+      const valid = validResponses(lastCard);
+      return cards.some(card => valid.includes(card));
+    }
+
+    function startSlapBattle(fromComputer = false) {
+      document.getElementById('slapArea').style.display = 'block';
+      log('SLAP battle begins! Click SLAP quickly!');
+      slapTimeout = setTimeout(() => {
+        handleSlap(fromComputer ? 'axilian' : 'computer');
+      }, 1000);
+    }
+
+    function handleSlap(who) {
+      clearTimeout(slapTimeout);
+      document.getElementById('slapArea').style.display = 'none';
+      if (who === 'player') {
+        log('You slapped first! Axilian draws a card from the bottom.');
+        computerCards.push(getRandomCard());
+      } else {
+        log('Axilian slapped first! You draw a card from the bottom.');
+        playerCards.push(getRandomCard());
+      }
+      updatePlayerHand();
+      setTimeout(computerMove, 1000);
+    }
+
+    function startGame() {
+      drawInitialCards();
+      const first = Math.floor(Math.random() * 3) + 1;
+      if (first <= 2) {
+        log("Axilian goes first!");
+        computerMove();
+      } else {
+        log("You go first!");
+        updatePlayerHand();
+      }
+    }
+
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById("startScreen").style.display = "none";
+        document.getElementById("gameArea").classList.remove("hidden");
+        startGame();
+      }, 5000);
+    }
+  </script>
+  <p>3.1.1</p>
 </body>
 </html>
